--- a/readme
+++ b/readme
@@ -9,7 +9,7 @@ FileManager is an application written in Dart that allows you to manage files an
 
 You can download the executable from the following link:
 
-- [Download the FileManager Executable](https://your-link.com/path-to-the-exe-file)
+- [Download the FileManager Executable](https://github.com/khadimFaye/DartProjects/tree/master/FileManager/bin/filemanager.exe)
 
 ## 🔧 Requirements
 
