--- a/readme
+++ b/readme
@@ -5,11 +5,7 @@ FileManager is an application written in Dart that allows you to manage files an
 ### 👤 Author
 - [Khadim Faye](https://github.com/khadimFaye)
 
-## 📥 Download the Executable
-
-You can download the executable from the following link:
-
-- [Download the FileManager Executable](https://github.com/khadimFaye/DartProjects/tree/master/FileManager/filemanager.exe)
+#
 
 ## 🔧 Requirements
 
@@ -90,6 +86,13 @@ You can install Dart via Chocolatey or manually:
     ```bash
     dart run
     ```
+
+### Compile the code to exe file
+ ```powershell
+
+cd Filemanager/bin
+dart compile exe filemanager.dart
+```
 
 ## Contributions
 
